--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@ h2{
 div.para h2{
     border: none;
     font-size: 6vh;
+    text-shadow: none;
     animation: none;
 }
 @-webkit-keyframes makeItRain {
@@ -280,7 +281,7 @@ div.para h2{
 @media only screen and (max-width: 650px) {
   div#home{
     
-    padding: 30vh 5vw;
+    padding: 30vh 2vw;
   }
   h1{
     font-size: 3.5vh !important;
