--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ div.para h2{
         </div>
         
         <div class="para">
-            <h2>Thanks for being the best friend like you who understands my past , believes in my future in except me just the way I am...</h2><canvas id="confetti"></canvas>
+            <h2>Thanks for being the best friend like you who understands my past , believes in my future and accept me just the way I am...</h2><canvas id="confetti"></canvas>
         </div>
     </div><div class="confetti">
         <div class="confetti-piece"></div>
